[gd_scene load_steps=10 format=3 uid="uid://vvxugvi0e71w"]

[ext_resource type="Script" path="res://entites/egg/egg.gd" id="1_okvmh"]
[ext_resource type="PackedScene" uid="uid://cpops7swngtur" path="res://entites/egg/egg_splat.tscn" id="2_q6ccf"]
[ext_resource type="Texture2D" uid="uid://c2kfrx7cym8kb" path="res://entites/egg/cloud.png" id="3_a73fo"]
[ext_resource type="PackedScene" uid="uid://d0kaayd644cg1" path="res://entites/egg/egg.glb" id="3_uvleg"]
[ext_resource type="AudioStream" uid="uid://drro0gu67l7ui" path="res://entites/egg/egg-splat.ogg" id="4_x5dop"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_klear"]
points = PackedVector3Array(0.656247, -0.182569, -0.143261, -0.677999, -0.21273, -0.024769, -0.67613, -0.212161, 0.0343642, -0.0853854, 0.95705, -0.0251455, 0.00477144, -0.0646034, 0.690747, -0.0248805, -0.657458, -0.528963, 0.0643972, -0.871842, 0.333454, -0.0836588, 0.378325, -0.61424, 0.448068, 0.704155, 0.0932711, 0.4767, -0.299757, 0.476568, -0.201382, 0.701903, 0.41721, 0.416921, 0.37753, -0.466106, -0.581651, 0.346636, -0.258927, -0.379301, -0.802839, 0.152492, 0.333894, -0.872461, -0.0549099, -0.435959, -0.298801, 0.504248, -0.434534, -0.327026, -0.493091, 0.270171, -0.299957, -0.614493, 0.412882, 0.373781, 0.471033, -0.583538, 0.377442, 0.240042, -0.293808, -0.871195, -0.174241, 0.686244, 0.0837254, 0.0342557, 0.0342449, 0.883412, -0.261556, -0.43836, 0.703891, -0.142762, 0.510927, -0.63012, 0.213133, 0.0932713, 0.704157, 0.448069, -0.260446, 0.28957, 0.594276, -0.0841056, -0.62736, 0.538167, -0.232289, -0.0345281, -0.647279, 0.394427, -0.63426, -0.384884, 0.0644345, -0.962139, -0.114689, -0.43617, 0.40626, -0.43617)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_88ah5"]
angle_min = -720.0
angle_max = 720.0
inherit_velocity_ratio = 1.0
direction = Vector3(1, 1, 1)
spread = 180.0
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, -3, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tuc6e"]
transparency = 1
albedo_texture = ExtResource("3_a73fo")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_bmu7g"]
material = SubResource("StandardMaterial3D_tuc6e")
size = Vector2(0.1, 0.1)

[node name="egg" type="RigidBody3D" groups=["egg"]]
collision_layer = 2
collision_mask = 3
mass = 0.04
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_okvmh")
egg_splat_scene = ExtResource("2_q6ccf")

[node name="Egg" parent="." instance=ExtResource("3_uvleg")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, 0)

[node name="EggCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_klear")

[node name="BreakingParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00220293, 0.0145748)
emitting = false
lifetime = 0.4
one_shot = true
explosiveness = 1.0
visibility_aabb = AABB(-1, -1, -1, 2, 2, 2)
process_material = SubResource("ParticleProcessMaterial_88ah5")
draw_passes = 2
draw_pass_1 = SubResource("QuadMesh_bmu7g")
draw_pass_2 = null

[node name="SplatAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_x5dop")
volume_db = -5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
